# mesa-viz

./: .gitignore  Procfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: codeql-analysis.yml  python-package.yml
examples/conways_game_of_life/conways_game_of_life/: cell.py  model.py  server.py
examples/conways_game_of_life/conways_game_of_life/.ipynb_checkpoints/: server-checkpoint.py
examples/schelling_side_by_side/: model.py  run.py  server.py
examples/turtle/: model.py  server.py
src/: pyproject.toml  setup.py
src/frontend/: controller.ts  index.ts  index_template.html  views.ts  websocket.ts
src/mesa_viz/: UserParam.py  VegaSpec.py  VegaVisualization.py  __init__.py  frontend.920a8bff.js  frontend.920a8bff.js.map  index_template.5a4452b1.css  index_template.5a4452b1.css.map  index_template.f91cb03a.css  index_template.f91cb03a.css.map  index_template.html  style.css
src/tuya/: index_template.html  package-lock.json  package.json
src/tuya/public/: index.html
src/tuya/src/: App.tsx  ModelController.tsx  index.tsx  store.ts
src/tuya/src/features/charts/: VegaCharts.tsx  chartReducer.ts
src/tuya/src/features/controller/: ModelController.tsx  controllerReducer.ts
src/tuya/src/features/model/: modelReducer.ts
src/tuya/src/features/modelStates/: modelStatesReducer.ts
src/tuya/src/features/parameters/: ParameterInput.tsx  parameterReducer.ts
src/tuya/src/features/websocket/: websocket.tsx
tutorial/: model.py  run.py  turtle.py  tutorial.py
