[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "mesa_viz"
author = "Mesa Developers"
author-email = "projectmesa@googlegroups.com"
home-page = "https://github.com/projectmesa/mesa_viz"
classifiers = ["License :: OSI Approved :: Apache Software License"]

