[build-system]
requires = ["setuptools", "flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "mesa_viz"
requires = ["mesa"]
author = "Corvince"
author-email = "projectmesa@googlegroups.com"
home-page = "https://github.com/corvince/mesa_viz"
classifiers = ["License :: OSI Approved :: Apache Software License"]

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
]
doc = ["sphinx"]